--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,6 +37,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r zapisy/requirements.test.txt
       - name: Install Node Dependencies
+        id : deps
         run: |
           cd zapisy
           yarnpkg install --immutable
@@ -45,11 +46,11 @@ jobs:
           cd zapisy
           yarn eslint --ext .vue .
       - name: Format Node assets
-        if: ${{ steps['Install Node Dependencies'].outcome == 'success' }}
+        if: ${{ steps.deps.outcome == 'success' }}
         run: |
           cd zapisy
           yarn prettier --check .
       - name: Lint Python
-        if: ${{ steps['Install Python Dependencies'].outcome == 'success' }}
+        if: ${{ steps.deps.outcome == 'success' }}
         run: |
           python -m flake8 --statistics .
