--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,6 +33,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Install Python Dependencies
+        id: py-deps
         run: |
           python -m pip install --upgrade pip
           pip install -r zapisy/requirements.test.txt
@@ -50,6 +51,6 @@ jobs:
           cd zapisy
           yarn prettier --check .
       - name: Lint Python
-        if: ${{ always() }}
+        if: ${{ steps.py-deps.outcome == 'success' }}
         run: |
           python -m flake8 --statistics .
