Poprawki w lint.yml (test)

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,6 +50,9 @@ jobs:
         run: |
           cd zapisy
           yarn prettier --check .
+      - name: Debug Install Python Dependencies outcome
+        if: always()
+        run: echo "Install Python Dependencies outcome: ${{ steps.py-deps.outcome }}, conclusion: ${{ steps.py-deps.conclusion }}"
       - name: Lint Python
         if: ${{ steps.py-deps.conclusion == 'success' }}
         run: |
