--- a/zapisy/package.json
+++ b/zapisy/package.json
@@ -32,7 +32,7 @@
     "markdown-it": "12.3.2",
     "popper.js": "1.16.1",
     "tablesorter": "2.31.3",
-    "vue": "^3.4.31",
+    "vue": "3.2",
     "vue-multiselect": "3.0.0",
     "vue-timers": "2.0.4",
     "vuex": "4.1.0"
@@ -53,7 +53,7 @@
     "@types/katex": "0.11.1",
     "@types/lodash": "4.14.192",
     "@types/markdown-it": "10.0.3",
-    "@vue/compiler-sfc": "3.2.0",
+    "@vue/compiler-sfc": "3.2",
     "autoprefixer": "9.8.8",
     "babel-loader": "8.3.0",
     "clean-webpack-plugin": "3.0.0",
@@ -72,7 +72,7 @@
     "ts-loader": "8.4.0",
     "typescript": "4.0.2",
     "vue-loader": "17.4.2",
-    "webpack": "4.47.0",
+    "webpack": "4.47",
     "webpack-bundle-analyzer": "3.9.0",
     "webpack-bundle-tracker": "0.4.3",
     "webpack-cli": "3.3.0",
