Add tiny-emitter to packacke json

--- a/zapisy/package.json
+++ b/zapisy/package.json
@@ -17,12 +17,12 @@
     "@fullcalendar/daygrid": "5.11.5",
     "@fullcalendar/timegrid": "5.11.5",
     "@popperjs/core": "2.11.8",
-    "ContentTools": "1.6.16",
     "axios": "0.21.4",
     "big-integer": "1.6.52",
     "bootstrap": "5.3.3",
     "bootstrap-print-css": "1.0.1",
     "checkboxes.js": "1.2.2",
+    "ContentTools": "1.6.16",
     "dayjs": "1.11.11",
     "jquery": "3.7.1",
     "js-cookie": "2.2.1",
@@ -32,6 +32,7 @@
     "markdown-it": "12.3.2",
     "popper.js": "1.16.1",
     "tablesorter": "2.31.3",
+    "tiny-emitter": "^2.1.0",
     "vue": "3.2",
     "vue-multiselect": "3.0.0",
     "vue-timers": "2.0.4",
