Downgrade `sass` to v1.26.10 ... yet again, AND possibly pausing this stupidity for now

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -28,7 +28,7 @@
     {
       "description": "Automerge some minor updates",
       "matchUpdateTypes": ["minor", "patch"],
-      "excludePackagePatterns": ["^Django$"],
+      "excludePackagePatterns": ["^Django$", "^sass$"],
       "matchCurrentVersion": "!/^0\\./",
       "automerge": true
     },
