--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     env: 
-      PYTHON_VERSION: 3.10
+      PYTHON_VERSION: '3.10'
       NODE_VERSION: 12
     steps:
       - name: Checkout code
