--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env: 
-      PYTHON_VERSION: 3.10
+      PYTHON_VERSION: '3.10'
       NODE_VERSION: 12
     services:
       postgres:
