--- a/zapisy/requirements.common.txt
+++ b/zapisy/requirements.common.txt
@@ -1,37 +1,41 @@
-Django==3.1.14
-django-bootstrap-pagination==1.7.1
+Django==4.2
+# django-bootstrap-pagination
+django-bootstrap5==24.1
 django-cas-ng==4.3.0
-django-crispy-forms==1.14.0
+django-crispy-forms==1.14.0 # Dostępna Wersja 2.3
 django-environ==0.9.0
-django-extensions==2.2.9
-django-filter==2.4.0
-django-mailer==1.2.6
-redis==3.5.3
-rq==1.14.1
+django-extensions==3.2.3 # Cannot be lower???
+django-filter==2.4.0 # Dostępna Wersja 24.3
+django-mailer==1.2.6 # Dostępna Wersja 2.3.2
+redis==3.5.3 # Dostępna Wersja 5.2.0
+rq==1.16.2 # Dostępna Wersja 2.0.0
 django-rq==2.8.1
-django-test-without-migrations==0.6
-django-webpack-loader==0.7.0
-djangorestframework==3.14.0
-django-pagedown==2.2.1
+django-test-without-migrations==0.6 ## Ostatni update 7 lat temu, po co zmieniać, jeżeli działa???
+django-webpack-loader==0.7.0 # Dostępna Wersja 3.1.1 ale trzeba ją skonfigurować
+djangorestframework==3.15.1
+django-pagedown==2.2.1 # Ostatni update ponad 3??? lata temu?
 
-ipdb==0.13.13
-prompt-toolkit==3.0.39
-ipython==7.34.0
-pycryptodome==3.19.0
-rollbar==0.16.3
-newrelic==5.24.0.153
+ipdb==0.13.13 # Ostatni update ponad rok temu
+prompt-toolkit==3.0.48
+ipython==7.34.0     # Dostępna Wersja 8.30.0
+pycryptodome==3.21.0
+rollbar==0.16.3      # Dostępna Wersja 1.1.0
+newrelic==5.24.0.153 # Dostępna Wersja -> 10.3.1
 gunicorn==20.1.0
-python-dateutil==2.8.2
-python-memcached==1.59
-more-itertools==8.14.0
+python-dateutil==2.9.0.post0
+# python-memcached
+pymemcache==4.0.0 # Dokumentacja django wspomina o tej bibliotece
+more-itertools==8.14.0 # Czy jest potrzebna w kodzie, ponieważ wygląda na to, że nie jest nigdzie wykorzystywana (chyba, że nie wprost) 
 xhtml2pdf==0.2.11
 # PyYAML is used for fixtures.
-pyyaml==6.0.1
+pyyaml==6.0.2
 # Bokeh - library used for plotting in views displaying Poll results
 bokeh==3.6.1
 
-gspread==3.7.0
-typing-extensions==3.10.0.2
+gspread==3.7.0 # Fajnie byłoby zmienić na coś nowszego ale nie są kompatybilne # gspread==6.1.4
+typing-extensions==3.10.0.2 # Czy jest potrzebna w kodzie, ponieważ wygląda na to, że nie jest nigdzie wykorzystywana (chyba, że nie wprost)
 oauth2client==4.1.3
 # We use html2text for one-off migration from HTML to markdown.
-html2text
+html2text==2024.2.26
+
+
