--- a/zapisy/package.json
+++ b/zapisy/package.json
@@ -5,7 +5,8 @@
     "dev:watch": "NODE_ENV=development yarn webpack-cli --watch --config webpack_resources/webpack.config.js",
     "dev:tc": "NODE_ENV=test yarn webpack-cli --config webpack_resources/webpack.config.js",
     "build": "NODE_ENV=production yarn webpack-cli --config webpack_resources/webpack.config.js",
-    "lint": "prettier --check ."
+    "lint": "prettier --check .",
+    "test": "jest"
   },
   "installConfig": {
     "pnp": true
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
+    "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "7.26.0",
     "@fortawesome/fontawesome-free": "5.15.4",
     "@fortawesome/fontawesome-svg-core": "1.3.0",
@@ -47,19 +49,27 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/vue-fontawesome": "2.0.10",
     "@types/bootstrap": "5.2.10",
+    "@types/convert-source-map": "^1",
+    "@types/jest": "^26.0.20",
     "@types/jquery": "3.5.32",
     "@types/js-cookie": "2.2.7",
     "@types/js-yaml": "3.12.10",
     "@types/katex": "0.11.1",
     "@types/lodash": "4.14.192",
     "@types/markdown-it": "10.0.3",
+    "@vue/test-utils": "^1.1.2",
     "autoprefixer": "9.8.8",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "26.6.3",
     "babel-loader": "8.4.1",
     "clean-webpack-plugin": "3.0.0",
+    "convert-source-map": "1.8.0",
     "cookieconsent": "3.1.1",
     "css-loader": "4.3.0",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "5.2.1",
+    "jest": "26.6.3",
+    "jest-cli": "26.6.3",
     "mini-css-extract-plugin": "0.12.0",
     "pnp-webpack-plugin": "1.7.0",
     "postcss": "7.0.39",
@@ -68,10 +78,13 @@
     "sass": "1.26.10",
     "sass-loader": "10.5.2",
     "terser-webpack-plugin": "4.2.3",
+    "ts-jest": "26.5.6",
     "ts-loader": "8.4.0",
     "typescript": "4.0.2",
     "vue-class-component": "7.2.6",
+    "vue-jest": "3.0.4",
     "vue-loader": "15.11.1",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "2.7.16",
     "webpack": "4.47.0",
     "webpack-bundle-analyzer": "3.9.0",
