--- a/env/.env
+++ b/env/.env
@@ -1,5 +1,6 @@
 DEBUG=True
 RELEASE=False
+SITE_ID=1 # SITE_ID dla wybranego środowiska (testowanie, produkcja, staging)
 ALLOWED_HOSTS=*
 TEMPLATE_DEBUG=True
 DATABASE_NAME=fereol
