--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Build Node assets
         run: |
           cd zapisy
-          yarnpkg dev:tc
+          yarn dev:tc
       - name: Run Tests
         run: |
           mv env/.env_ci env/.env
